package tech.vedantchimote.model;

public class Owner extends Person {

}
