package tech.vedantchimote.model;

public class Vet extends Person {


}
