package tech.vedantchimote.services;

import tech.vedantchimote.model.Pet;

public interface PetService extends CrudService<Pet, Long> {

}
