package tech.vedantchimote.services;


import tech.vedantchimote.model.Vet;

public interface VetService extends CrudService<Vet, Long> {

}
