/**
 * Created By Vedant Chimote Date : 07-09-2023 Time : 22:53 Project-Name : ownpetclinic
 */

package tech.vedantchimote.controllers;

import org.springframework.stereotype.Controller;
import org.springframework.web.bind.annotation.RequestMapping;

@Controller
public class OwnerController {

  @RequestMapping({"/owners", "owners/index", "/owners/index.html"})
  public String listOwners() {
    return "owners/index";
  }

}
