package tech.vedantchimote.petclinic.model;

public class PetType {

  private String name;

  public String getName() {
    return name;
  }

  public void setName(String name) {
    this.name = name;
  }
}
